# sql-lint

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  main.py  pyproject.toml  test.sql
sql_lint/: .sqlfluff  hook.py  sql_formatter.py  utils.py
